--- a/output/automating-android-app-publishing-to-play-store-using-jenkins.html
+++ b/output/automating-android-app-publishing-to-play-store-using-jenkins.html
@@ -21,16 +21,15 @@
             crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/pygment.css" />
-      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/voidybootstrap.css" />
+      <link rel="stylesheet" href="./theme/css/pygment.css" />
+      <link rel="stylesheet" href="./theme/css/voidybootstrap.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js" integrity="sha384-FFgGfda92tXC8nCNOxrCQ3R8x1TNkMFqDZVQdDaaJiiVbjkPBXIJBx0o7ETjy8Bh" crossorigin="anonymous"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="https://ptyagicodecamp.github.io/favicon.ico" />
-        <link href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="techLog Atom Feed" />
+    <link rel="shortcut icon" href="./favicon.ico" />
   </head>
 
   <body>
@@ -45,7 +44,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="https://ptyagicodecamp.github.io/" rel="home">
+		<a class="navbar-brand" href="./" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> </a>
        </div>
 
@@ -53,12 +52,9 @@
         <ul class="nav navbar-nav">
             <li class="divider"></li>
             <li class="">
-              <a href="https://ptyagicodecamp.github.io/archives.html">Archives</a>
+              <a href="./archives.html">Archives</a>
             </li>
           <li class="divider"></li>
-            <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
-                   type="application/atom+xml" rel="alternate">
-                <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
       </div> <!-- /navbar-collapse -->
 	  </div> <!-- /container -->
@@ -66,7 +62,7 @@
 
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1><a href="https://ptyagicodecamp.github.io/">techLog</a></h1>
+		<h1><a href="./">techLog</a></h1>
 		<p class="lead">Explore | Android | Software Engineering</p>
 	  </div>
 	</div>
@@ -79,15 +75,15 @@
 <abbr class="article-header-date">
   Thu 23 February 2017
 </abbr> <h1>
-  <a href="https://ptyagicodecamp.github.io/automating-android-app-publishing-to-play-store-using-jenkins.html" rel="bookmark"
+  <a href="./automating-android-app-publishing-to-play-store-using-jenkins.html" rel="bookmark"
      title="Permalink to Automating Android App publishing to Play Store using Jenkins">
     Automating Android App publishing to Play Store  using Jenkins
   </a>
 </h1><div class="article-header-info">
   <p>
-      Posted by <a href="https://ptyagicodecamp.github.io/author/ptyagi.html">ptyagi</a>
+      Posted by <a href="./author/ptyagi.html">ptyagi</a>
     in 
-    <a href="https://ptyagicodecamp.github.io/category/development.html">
+    <a href="./category/development.html">
       Development</a>
     &nbsp;&nbsp;
   </p>
@@ -172,9 +168,9 @@
   
 <div class="article-tag-list">
 <span class="label label-default">Tags</span>
-	<a href="https://ptyagicodecamp.github.io/tag/android.html"><i class="fa fa-tag"></i>Android</a>&nbsp;
-	<a href="https://ptyagicodecamp.github.io/tag/jenkins.html"><i class="fa fa-tag"></i>Jenkins</a>&nbsp;
-	<a href="https://ptyagicodecamp.github.io/tag/devops.html"><i class="fa fa-tag"></i>DevOps</a>&nbsp;
+	<a href="./tag/android.html"><i class="fa fa-tag"></i>Android</a>&nbsp;
+	<a href="./tag/jenkins.html"><i class="fa fa-tag"></i>Jenkins</a>&nbsp;
+	<a href="./tag/devops.html"><i class="fa fa-tag"></i>DevOps</a>&nbsp;
 </div>  <hr />
   <div class="well well-sm">  <!-- Social media sharing buttons -->
 
@@ -185,7 +181,7 @@
 
     <!-- Facebook -->
     <div class="fb-like" 
-        data-href="https://ptyagicodecamp.github.io/automating-android-app-publishing-to-play-store-using-jenkins.html" 
+        data-href="./automating-android-app-publishing-to-play-store-using-jenkins.html" 
         data-layout="button_count" 
         data-action="like" data-show-faces="true" 
         data-share="true">
@@ -228,9 +224,9 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="https://ptyagicodecamp.github.io/category/development.html" >
+  <li><a href="./category/development.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development</a></li>
-  <li><a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html" >
+  <li><a href="./category/development-flutter-cross-platform.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development, Flutter, Cross-platform</a></li>
 </ul>
 </div>
@@ -238,12 +234,6 @@
 </div> <!-- /row -->
 
 
-<h4><i class="fa fa-rss fa-fw fa-lg"></i> Feeds</h4>
-<ul class="list-unstyled">
-    <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
-		   type="application/atom+xml" rel="alternate">
-		<i class="fa fa-rss-square fa-fw fa-lg"></i> Atom Feed</a></li>
-</ul>
 
 <hr />
 
