--- a/output/tags.html
+++ b/output/tags.html
@@ -21,16 +21,15 @@
             crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/pygment.css" />
-      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/voidybootstrap.css" />
+      <link rel="stylesheet" href="./theme/css/pygment.css" />
+      <link rel="stylesheet" href="./theme/css/voidybootstrap.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js" integrity="sha384-FFgGfda92tXC8nCNOxrCQ3R8x1TNkMFqDZVQdDaaJiiVbjkPBXIJBx0o7ETjy8Bh" crossorigin="anonymous"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="https://ptyagicodecamp.github.io/favicon.ico" />
-        <link href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="techLog Atom Feed" />
+    <link rel="shortcut icon" href="./favicon.ico" />
   </head>
 
   <body>
@@ -45,7 +44,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="https://ptyagicodecamp.github.io/" rel="home">
+		<a class="navbar-brand" href="./" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> </a>
        </div>
 
@@ -53,12 +52,9 @@
         <ul class="nav navbar-nav">
             <li class="divider"></li>
             <li class="">
-              <a href="https://ptyagicodecamp.github.io/archives.html">Archives</a>
+              <a href="./archives.html">Archives</a>
             </li>
           <li class="divider"></li>
-            <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
-                   type="application/atom+xml" rel="alternate">
-                <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
       </div> <!-- /navbar-collapse -->
 	  </div> <!-- /container -->
@@ -66,7 +62,7 @@
 
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1><a href="https://ptyagicodecamp.github.io/">techLog</a></h1>
+		<h1><a href="./">techLog</a></h1>
 		<p class="lead">Explore | Android | Software Engineering</p>
 	  </div>
 	</div>
@@ -112,9 +108,9 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="https://ptyagicodecamp.github.io/category/development.html" >
+  <li><a href="./category/development.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development</a></li>
-  <li><a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html" >
+  <li><a href="./category/development-flutter-cross-platform.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development, Flutter, Cross-platform</a></li>
 </ul>
 </div>
@@ -122,12 +118,6 @@
 </div> <!-- /row -->
 
 
-<h4><i class="fa fa-rss fa-fw fa-lg"></i> Feeds</h4>
-<ul class="list-unstyled">
-    <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
-		   type="application/atom+xml" rel="alternate">
-		<i class="fa fa-rss-square fa-fw fa-lg"></i> Atom Feed</a></li>
-</ul>
 
 <hr />
 
