--- a/output/archives.html
+++ b/output/archives.html
@@ -21,15 +21,16 @@
             crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="./theme/css/pygment.css" />
-      <link rel="stylesheet" href="./theme/css/voidybootstrap.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/pygment.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/voidybootstrap.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js" integrity="sha384-FFgGfda92tXC8nCNOxrCQ3R8x1TNkMFqDZVQdDaaJiiVbjkPBXIJBx0o7ETjy8Bh" crossorigin="anonymous"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="https://ptyagicodecamp.github.io/favicon.ico" />
+        <link href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="techLog Atom Feed" />
   </head>
 
   <body>
@@ -44,7 +45,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="./" rel="home">
+		<a class="navbar-brand" href="https://ptyagicodecamp.github.io/" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> </a>
        </div>
 
@@ -52,9 +53,12 @@
         <ul class="nav navbar-nav">
             <li class="divider"></li>
             <li class="active">
-              <a href="./archives.html">Archives</a>
+              <a href="https://ptyagicodecamp.github.io/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
+            <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+                   type="application/atom+xml" rel="alternate">
+                <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
       </div> <!-- /navbar-collapse -->
 	  </div> <!-- /container -->
@@ -62,7 +66,7 @@
 
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1><a href="./">techLog</a></h1>
+		<h1><a href="https://ptyagicodecamp.github.io/">techLog</a></h1>
 		<p class="lead">Explore | Android | Software Engineering</p>
 	  </div>
 	</div>
@@ -71,7 +75,7 @@
       <div class="row">
         <div class="col-md-9" id="content">
 <ol class="breadcrumb">
-  <li><a href="./" title="Home">
+  <li><a href="https://ptyagicodecamp.github.io/" title="Home">
 	  <i class="fa fa-home fa-fw fa-lg"></i> </a></li>
   <li class="active">Archives</li>
 </ol>
@@ -80,53 +84,53 @@
   <h2>2018</h2>
   <dl>
 	<dt>Tue 30 January 2018</dt>
-	<dd><a href='./a-flutter-live-booklet-flutter-component-recipes.html'>A Flutter Live Booklet: Flutter component recipes</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/a-flutter-live-booklet-flutter-component-recipes.html'>A Flutter Live Booklet: Flutter component recipes</a></dd>
 	<dt>Tue 30 January 2018</dt>
-	<dd><a href='./flutter-code-recipe-for-animatedopacity-widget.html'>Flutter code recipe for AnimatedOpacity widget</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/flutter-code-recipe-for-animatedopacity-widget.html'>Flutter code recipe for AnimatedOpacity widget</a></dd>
   </dl>
   <h2>2017</h2>
   <dl>
 	<dt>Sat 12 August 2017</dt>
-	<dd><a href='./managing-apps-lifecycle-using-lifecycle-aware-components-part-1.html'>Managing App's Lifecycle using "Lifecycle Aware components" (Part 1)</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/managing-apps-lifecycle-using-lifecycle-aware-components-part-1.html'>Managing App's Lifecycle using "Lifecycle Aware components" (Part 1)</a></dd>
 	<dt>Wed 26 July 2017</dt>
-	<dd><a href='./how-to-start-using-custom-fonts-in-an-android-app-under-5-minutes.html'>How to start using custom fonts in an Android App under 5 minutes</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/how-to-start-using-custom-fonts-in-an-android-app-under-5-minutes.html'>How to start using custom fonts in an Android App under 5 minutes</a></dd>
 	<dt>Tue 18 July 2017</dt>
-	<dd><a href='./how-did-i-set-up-multiple-flavors-for-an-android-app-under-5-minutes.html'>How did I set up multiple flavors for an Android App under 5 minutes</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/how-did-i-set-up-multiple-flavors-for-an-android-app-under-5-minutes.html'>How did I set up multiple flavors for an Android App under 5 minutes</a></dd>
 	<dt>Thu 13 July 2017</dt>
-	<dd><a href='./android-model-view-presenter-mvp-design-pattern.html'>Android Model-View-Presenter (MVP) Design Pattern</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/android-model-view-presenter-mvp-design-pattern.html'>Android Model-View-Presenter (MVP) Design Pattern</a></dd>
 	<dt>Tue 20 June 2017</dt>
-	<dd><a href='./requesting-audio-permission-at-runtime.html'>Requesting Audio permission at Runtime</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/requesting-audio-permission-at-runtime.html'>Requesting Audio permission at Runtime</a></dd>
 	<dt>Sun 18 June 2017</dt>
-	<dd><a href='./getting-started-with-developing-android-apps-in-kotlin.html'>Getting started with developing Android apps in Kotlin</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/getting-started-with-developing-android-apps-in-kotlin.html'>Getting started with developing Android apps in Kotlin</a></dd>
 	<dt>Fri 16 June 2017</dt>
-	<dd><a href='./how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html'>How did I integrated a launcher screen in an Android App under 5 minutes</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html'>How did I integrated a launcher screen in an Android App under 5 minutes</a></dd>
 	<dt>Wed 19 April 2017</dt>
-	<dd><a href='./adding-menu-items-in-navigation-drawer-dynamically.html'>Adding Menu Items in Navigation Drawer Dynamically</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/adding-menu-items-in-navigation-drawer-dynamically.html'>Adding Menu Items in Navigation Drawer Dynamically</a></dd>
 	<dt>Tue 18 April 2017</dt>
-	<dd><a href='./scheduling-repeating-local-notifications-using-alarm-manager.html'>Scheduling Repeating Local Notifications using Alarm Manager</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/scheduling-repeating-local-notifications-using-alarm-manager.html'>Scheduling Repeating Local Notifications using Alarm Manager</a></dd>
 	<dt>Thu 13 April 2017</dt>
-	<dd><a href='./android-studio-tips-tricks-series.html'>Android Studio Tips & Tricks Series</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/android-studio-tips-tricks-series.html'>Android Studio Tips & Tricks Series</a></dd>
 	<dt>Thu 13 April 2017</dt>
-	<dd><a href='./how-to-get-sha1-fingerprint-for-digitally-signed-apk.html'>How to get SHA1 fingerprint for digitally signed APK</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/how-to-get-sha1-fingerprint-for-digitally-signed-apk.html'>How to get SHA1 fingerprint for digitally signed APK</a></dd>
 	<dt>Thu 13 April 2017</dt>
-	<dd><a href='./accessing-pictures-using-fileprovider.html'>Accessing Pictures using FileProvider</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/accessing-pictures-using-fileprovider.html'>Accessing Pictures using FileProvider</a></dd>
 	<dt>Thu 23 February 2017</dt>
-	<dd><a href='./automating-android-app-publishing-to-play-store-using-jenkins.html'>Automating Android App publishing to Play Store  using Jenkins</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/automating-android-app-publishing-to-play-store-using-jenkins.html'>Automating Android App publishing to Play Store  using Jenkins</a></dd>
 	<dt>Wed 15 February 2017</dt>
-	<dd><a href='./creating-sub-menuitems-for-fab-floating-action-button.html'>Creating Sub MenuItems for FAB (Floating Action Button)</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/creating-sub-menuitems-for-fab-floating-action-button.html'>Creating Sub MenuItems for FAB (Floating Action Button)</a></dd>
 	<dt>Mon 09 January 2017</dt>
-	<dd><a href='./android-webviewoverlay-widget.html'>Android WebViewOverlay Widget</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/android-webviewoverlay-widget.html'>Android WebViewOverlay Widget</a></dd>
 	<dt>Sat 07 January 2017</dt>
-	<dd><a href='./how-did-i-publish-android-library-to-jcenter-from-android-studio.html'>How did I publish Android Library to JCenter from Android Studio</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/how-did-i-publish-android-library-to-jcenter-from-android-studio.html'>How did I publish Android Library to JCenter from Android Studio</a></dd>
   </dl>
   <h2>2016</h2>
   <dl>
 	<dt>Tue 20 December 2016</dt>
-	<dd><a href='./automatic-android-apk-signing.html'>Automatic Android APK Signing</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/automatic-android-apk-signing.html'>Automatic Android APK Signing</a></dd>
 	<dt>Fri 16 December 2016</dt>
-	<dd><a href='./webviewhelper-library.html'>WebViewHelper library</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/webviewhelper-library.html'>WebViewHelper library</a></dd>
 	<dt>Thu 08 December 2016</dt>
-	<dd><a href='./my-take-on-pelican-and-github-pages-from-a-beginners-perspective.html'>My take on Pelican and Github pages from a beginner's perspective</a></dd>
+	<dd><a href='https://ptyagicodecamp.github.io/my-take-on-pelican-and-github-pages-from-a-beginners-perspective.html'>My take on Pelican and Github pages from a beginner's perspective</a></dd>
   </dl>
 </div> <!-- /#archives-body -->
         </div><!-- /content -->
@@ -164,9 +168,9 @@
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="./category/development.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development</a></li>
-  <li><a href="./category/development-flutter-cross-platform.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development, Flutter, Cross-platform</a></li>
 </ul>
 </div>
@@ -174,6 +178,12 @@
 </div> <!-- /row -->
 
 
+<h4><i class="fa fa-rss fa-fw fa-lg"></i> Feeds</h4>
+<ul class="list-unstyled">
+    <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+		   type="application/atom+xml" rel="alternate">
+		<i class="fa fa-rss-square fa-fw fa-lg"></i> Atom Feed</a></li>
+</ul>
 
 <hr />
 
