--- a/output/how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html
+++ b/output/how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html
@@ -21,15 +21,16 @@
             crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="./theme/css/pygment.css" />
-      <link rel="stylesheet" href="./theme/css/voidybootstrap.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/pygment.css" />
+      <link rel="stylesheet" href="https://ptyagicodecamp.github.io/theme/css/voidybootstrap.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js" integrity="sha384-FFgGfda92tXC8nCNOxrCQ3R8x1TNkMFqDZVQdDaaJiiVbjkPBXIJBx0o7ETjy8Bh" crossorigin="anonymous"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="https://ptyagicodecamp.github.io/favicon.ico" />
+        <link href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="techLog Atom Feed" />
   </head>
 
   <body>
@@ -44,7 +45,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="./" rel="home">
+		<a class="navbar-brand" href="https://ptyagicodecamp.github.io/" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> </a>
        </div>
 
@@ -52,9 +53,12 @@
         <ul class="nav navbar-nav">
             <li class="divider"></li>
             <li class="">
-              <a href="./archives.html">Archives</a>
+              <a href="https://ptyagicodecamp.github.io/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
+            <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+                   type="application/atom+xml" rel="alternate">
+                <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
       </div> <!-- /navbar-collapse -->
 	  </div> <!-- /container -->
@@ -62,7 +66,7 @@
 
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1><a href="./">techLog</a></h1>
+		<h1><a href="https://ptyagicodecamp.github.io/">techLog</a></h1>
 		<p class="lead">Explore | Android | Software Engineering</p>
 	  </div>
 	</div>
@@ -75,15 +79,15 @@
 <abbr class="article-header-date">
   Fri 16 June 2017
 </abbr> <h1>
-  <a href="./how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html" rel="bookmark"
+  <a href="https://ptyagicodecamp.github.io/how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html" rel="bookmark"
      title="Permalink to How did I integrated a launcher screen in an Android App under 5 minutes">
     How did I integrated a launcher screen in an Android App under 5 minutes
   </a>
 </h1><div class="article-header-info">
   <p>
-      Posted by <a href="./author/ptyagi.html">ptyagi</a>
+      Posted by <a href="https://ptyagicodecamp.github.io/author/ptyagi.html">ptyagi</a>
     in 
-    <a href="./category/development.html">
+    <a href="https://ptyagicodecamp.github.io/category/development.html">
       Development</a>
     &nbsp;&nbsp;
   </p>
@@ -162,10 +166,10 @@ Don't forget to add this activity in your <code>AndroidManifest.xml</code>.</p>
   
 <div class="article-tag-list">
 <span class="label label-default">Tags</span>
-	<a href="./tag/android.html"><i class="fa fa-tag"></i>android</a>&nbsp;
-	<a href="./tag/launcher-screen.html"><i class="fa fa-tag"></i>launcher screen</a>&nbsp;
-	<a href="./tag/dev.html"><i class="fa fa-tag"></i>dev</a>&nbsp;
-	<a href="./tag/design.html"><i class="fa fa-tag"></i>design</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/android.html"><i class="fa fa-tag"></i>android</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/launcher-screen.html"><i class="fa fa-tag"></i>launcher screen</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/dev.html"><i class="fa fa-tag"></i>dev</a>&nbsp;
+	<a href="https://ptyagicodecamp.github.io/tag/design.html"><i class="fa fa-tag"></i>design</a>&nbsp;
 </div>  <hr />
   <div class="well well-sm">  <!-- Social media sharing buttons -->
 
@@ -176,7 +180,7 @@ Don't forget to add this activity in your <code>AndroidManifest.xml</code>.</p>
 
     <!-- Facebook -->
     <div class="fb-like" 
-        data-href="./how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html" 
+        data-href="https://ptyagicodecamp.github.io/how-did-i-integrated-a-launcher-screen-in-an-android-app-under-5-minutes.html" 
         data-layout="button_count" 
         data-action="like" data-show-faces="true" 
         data-share="true">
@@ -219,9 +223,9 @@ Don't forget to add this activity in your <code>AndroidManifest.xml</code>.</p>
 <div class="col-xs-6 col-md-12">
 <h4><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h4>
 <ul class="list-unstyled category-links">
-  <li><a href="./category/development.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development</a></li>
-  <li><a href="./category/development-flutter-cross-platform.html" >
+  <li><a href="https://ptyagicodecamp.github.io/category/development-flutter-cross-platform.html" >
     <i class="fa fa-folder-open fa-fw fa-lg"></i> Development, Flutter, Cross-platform</a></li>
 </ul>
 </div>
@@ -229,6 +233,12 @@ Don't forget to add this activity in your <code>AndroidManifest.xml</code>.</p>
 </div> <!-- /row -->
 
 
+<h4><i class="fa fa-rss fa-fw fa-lg"></i> Feeds</h4>
+<ul class="list-unstyled">
+    <li><a href="https://ptyagicodecamp.github.io/feeds/all.atom.xml" 
+		   type="application/atom+xml" rel="alternate">
+		<i class="fa fa-rss-square fa-fw fa-lg"></i> Atom Feed</a></li>
+</ul>
 
 <hr />
 
