publishing new content

--- a/output/persisting-data-in-local-database-for-flutter-android-ios.html
+++ b/output/persisting-data-in-local-database-for-flutter-android-ios.html
@@ -154,8 +154,12 @@
 <p><strong>Focus Widget:</strong> Flutter plugin <a href="https://pub.dev/packages/sqflite">sqflite</a>.</p>
 <p><strong>Goal:</strong> In this recipe, we'll create, save, and retrieve two objects of custom data type, <code>Product</code> in the local sqlite database. We'll create two files for this recipe:</p>
 <ul>
-<li><strong>User Interface</strong> -<a href="https://github.com/ptyagicodecamp/flutter_cookbook/blob/widgets-code/flutter_widgets/lib/persistence/ecom.dart"><code>ecom.dart</code></a> : User interface to load data from local database.</li>
-<li><strong>Database</strong> -<a href="https://github.com/ptyagicodecamp/flutter_cookbook/blob/widgets-code/flutter_widgets/lib/persistence/ecom_db.dart"><code>ecom_db.dart</code></a>: This file contains all code related to sqlite database.</li>
+<li>
+<p><strong>User Interface</strong> -<a href="https://github.com/ptyagicodecamp/flutter_cookbook/blob/widgets-code/flutter_widgets/lib/persistence/ecom.dart"><code>ecom.dart</code></a> : User interface to load data from local database.</p>
+</li>
+<li>
+<p><strong>Database</strong> -<a href="https://github.com/ptyagicodecamp/flutter_cookbook/blob/widgets-code/flutter_widgets/lib/persistence/ecom_db.dart"><code>ecom_db.dart</code></a>: This file contains all code related to sqlite database.</p>
+</li>
 </ul>
 <p>The user interface will load two demo products in a <code>ListView</code> as shown in this screenshot:</p>
 <p><img alt="products_db" src="https://ptyagicodecamp.github.io/localdb_products.jpg"></p>
