publishing new content

--- a/output/vim-editor-references.html
+++ b/output/vim-editor-references.html
@@ -52,7 +52,7 @@
 
 <meta name="author" content="ptyagi" />
 <meta name="description" content="A quick guide to Vim editor commands. I&#39;m using macOS Terminal to run vim editor." />
-<meta name="keywords" content="DevOps, CLI">
+<meta name="keywords" content="dev_ops, cli">
 
 
 <meta property="og:site_name" content="tech&Life"/>
@@ -65,8 +65,8 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://ptyagicodecamp.github.io/author/ptyagi.html">
 <meta property="article:section" content="DevOps"/>
-<meta property="article:tag" content="DevOps"/>
-<meta property="article:tag" content="CLI"/>
+<meta property="article:tag" content="dev_ops"/>
+<meta property="article:tag" content="cli"/>
 <meta property="og:image" content="https://ptyagicodecamp.github.io/images/profile.jpg">
 
   <title>tech&Life &ndash; Vim Editor References</title>
@@ -180,8 +180,7 @@
     </script>
 
   <div>
-    <p><strong>Note</strong> This article is in progress.</p>
-<p>This article is a quick getting started guide to Vim editor commands. Vim editor is an improved version of classic <code>Vi</code> editor, hence named 'Vi Improved' or <code>Vim</code> in short.</p>
+    <p>This article is a quick getting started guide to Vim editor commands. Vim editor is an improved version of classic <code>Vi</code> editor, hence named 'Vi Improved' or <code>Vim</code> in short.</p>
 <p><strong><em>Note</em></strong>: I'm using macOS Terminal to run vim editor.</p>
 <h2>Installing Vim Editor (macOS)</h2>
 <p>You can download Vim editor on macOS using Homebrew package manager.</p>
@@ -208,14 +207,17 @@
 <ol>
 <li><a href="https://formulae.brew.sh/formula/vim">Installing Homebrew</a></li>
 </ol>
+<hr>
+<h2>NOTE</h2>
+<h2>This article is in progress.</h2>
 <p>Follow me at <a href="https://medium.com/@ptyagicodecamp">Medium</a>
 Follow me at <a href="https://twitter.com/ptyagi13">twitter</a></p>
 <p><img alt="TODO" src="https://ptyagicodecamp.github.io/TODO.jpg"></p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://ptyagicodecamp.github.io/tag/devops.html">DevOps</a>
-      <a href="https://ptyagicodecamp.github.io/tag/cli.html">CLI</a>
+      <a href="https://ptyagicodecamp.github.io/tag/dev_ops.html">dev_ops</a>
+      <a href="https://ptyagicodecamp.github.io/tag/cli.html">cli</a>
     </p>
   </div>
 
