publishing new content

--- a/output/archives.html
+++ b/output/archives.html
@@ -164,6 +164,11 @@
         <dd>
           <a href="https://ptyagicodecamp.github.io/vim-editor-references.html">Vim Editor References</a>
         </dd>
+          <dt>August 20, 2022</dt>
+
+        <dd>
+          <a href="https://ptyagicodecamp.github.io/vim-editor-references-test.html">Vim Editor References Test</a>
+        </dd>
           <dt>March 21, 2021</dt>
 
         <dd>
